--- a/Frontend/Pages/Users.razor
+++ b/Frontend/Pages/Users.razor
@@ -22,11 +22,11 @@ else
 <button class="btn btn-primary mt-2" @onclick="Login" disabled=@(vm?.CurrentUserId != null)>
         Login
     </button>
-<button class="btn btn-primary mt-2" @onclick=@vm.Logout disabled=@(vm?.CurrentUserId == null)>
+<button class="btn btn-primary mt-2" @onclick=@vm!.Logout disabled=@(vm?.CurrentUserId == null)>
         Logout
     </button>
-<button class="btn btn-primary mt-2" @onclick="UpdatePwd" disabled=@(vm?.CurrentUserId == null)>
-        Update Password
+<button class="btn btn-primary mt-2" @onclick="() => EditUser(vm?.CurrentUserId)" disabled=@(vm?.CurrentUserId == null)>
+        Edit User
     </button>
     <button class="btn btn-primary mt-2" @onclick="Register">
         Register
@@ -43,7 +43,7 @@ else if (vm.AllUsers.Count == 0)
 }
 else
 {
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Full Name</th>
@@ -53,7 +53,8 @@ else
         <tbody>
             @foreach (var user in vm.AllUsers)
             {
-                <tr>
+                <tr
+                    @ondblclick="() => EditUser(user.Id)">
                     <td>@user.FullName</td>
                     <td>@(user.IsOnline ? "Online" : "Offline")</td>
                 </tr>
@@ -64,7 +65,7 @@ else
 
 <LoginDialog Vm="vm" />
 
-<PasswordDialog Vm="vm" />
+<EditUserDlg Vm="vm" />
 
 
 
@@ -92,11 +93,12 @@ else
 
 
 
-    private async Task UpdatePwd()
+    private async Task EditUser(int? userId)
     {
         if (vm != null)
         {
-            Console.WriteLine("UpdatePwd clicked");
+            Console.WriteLine("EditUser clicked");
+            vm.EditUserId = userId;
             vm.ShowPwdDialog = true;
             StateHasChanged();
         }
