--- a/Frontend/Components/LoginDialog.razor
+++ b/Frontend/Components/LoginDialog.razor
@@ -59,7 +59,7 @@
 
 @code {
     [Parameter]
-    public UsersViewModel? Vm { get; set; }
+    public UsersPageViewModel? Vm { get; set; }
 
     private bool showPassword = false;
 
