--- a/Frontend/Pages/UsersPage.razor
+++ b/Frontend/Pages/UsersPage.razor
@@ -1,9 +1,15 @@
-﻿@page "/users"
+﻿@page "/usersPage"
 @inject Frontend.Services.UserApiService UserService
 
 @using Frontend.Components
+@using Frontend.ViewModels
 
-<PageTitle>Users</PageTitle>
+@inherits UsersPageViewModel;
+
+
+
+
+<PageTitle>Users Page</PageTitle>
 
 <h1>Users</h1>
 <hr />
@@ -63,15 +69,23 @@ else
     </table>
 }
 
+<LoginDialog Vm="vm" />
+
+<EditUserDlg 
+    Vm="vm" 
+    AllUsers="vm!.AllUsers" 
+ />
 
 
 
 @code {
-    private Frontend.ViewModels.UsersViewModel? vm;
+
+    private UsersPageViewModel? vm;
 
     protected override async Task OnInitializedAsync()
     {
-        vm = new Frontend.ViewModels.UsersViewModel(UserService);
+
+        vm = this;
 
         vm.OnStateChanged += () =>
         {
