--- a/Frontend/Layout/NavMenu.razor
+++ b/Frontend/Layout/NavMenu.razor
@@ -30,7 +30,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="users">
+            <NavLink class="nav-link" href="usersPage">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
             </NavLink>
         </div>
