--- a/Frontend/Pages/Home.razor
+++ b/Frontend/Pages/Home.razor
@@ -1,7 +1,12 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Memory</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Memory</h1>
 
-Welcome to your new app.
+Single player and multi player game
+
+<hr />
+
+<img src="images/memory.jpg" />
+
