--- a/Frontend/Components/LoginDialog.razor
+++ b/Frontend/Components/LoginDialog.razor
@@ -44,8 +44,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" @onclick="Cancel">Cancel</button>
-                    <button class="btn btn-success" @onclick="Confirm">OK</button>
+                    <button class="btn btn-success" @onclick="Confirm">Submit</button>
                 </div>
 
             </div>
