--- a/Frontend/Components/UserDialog.razor
+++ b/Frontend/Components/UserDialog.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components
 @using Shared.DTOs
 
+
 @if (Vm != null && Vm.ShowPwdDialog)
 {
     <div class="modal-backdrop"></div>
@@ -76,8 +77,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" @onclick="Vm.PwdCancel">Cancel</button>
-                    <button class="btn btn-success" @onclick="Vm.PwdOk">OK</button>
+                    <button class="btn btn-danger">Delete user</button>
+                    <button class="btn btn-primary" @onclick="Vm.PwdOk">Submit</button>
                 </div>
 
             </div>
